# multinav2

./: .dockerignore  .gitignore  .gitmodules  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  runall.sh  setup.cfg  tox.ini
.github/: RELEASE_PR.md
.github/workflows/: lint.yml  test.yml
docker/: attach.sh  development.Dockerfile  entrypoint.sh  image-entrypoint.sh  run.sh
docs/: reproducibility-notes
inputs/: automaton.pickle  level0.yaml  level1.yaml  level2.yaml  office2-0dqn.yaml  office2-0sh.yaml  office2-1delayed1.yaml  office2-1q.yaml  office2-1sh.yaml  office2-2.yaml  party0.yaml  party0ros-nosh.yaml  party1.yaml  party2.yaml  rooms0-nosh.yaml  rooms1-nosh.yaml  rooms1-sh.yaml  rooms1-shinv.yaml  rooms1.yaml  rooms2.yaml  rooms4-0nosh-ddqn.yaml  rooms4-0nosh-sac.yaml  rooms4-1delayedq.yaml  rooms4-1nosh.yaml  rooms4-1q.yaml  rooms4-1sh.yaml  rooms4-1shinv.yaml  rooms4-2.yaml  rooms8-1delayedq.yaml  rooms8-1q.yaml  rooms8-1sh-1error.yaml  rooms8-1sh-2error.yaml  rooms8-1sh.yaml  rooms8-1shinv.yaml  rooms8-2-1error.yaml  rooms8-2-2error.yaml  rooms8-2.yaml  roomsy-0nosh-dqn.yaml  roomsy-0nosh-sac.yaml  sapientino-abs-params.json  (+3 more)
inputs/ros-scripts/: attach-navigation.bash  environment  run-compose.bash  start-compose.bash
multinav/: __init__.py  __main__.py  testing.py  training.py
multinav/algorithms/: agents.py  delayed_q.py  policy_net.py  q_learning.py
multinav/envs/: base.py  env_abstract_rooms.py  env_abstract_sapientino.py  env_cont_rooms.py  env_grid_rooms.py  env_grid_sapientino.py  env_ros_stage.py  envs.py  temporal_goals.py
multinav/helpers/: __init__.py  callbacks.py  general.py  gym.py  misc.py  pythomata.py  reward_shaping.py  rllib.py  stable_baselines.py  streaming.py
multinav/wrappers/: __init__.py  reward_shaping.py  sapientino.py  temprl.py  training.py  utils.py
notebooks/: 00_abstract_sapientino.ipynb  01_abstract_sapientino_with_rb.ipynb  02_grid_sapientino.ipynb  03_continuous_sapientino.ipynb  0_abstract_sapientino.ipynb
saved-runs/: 211028.tar
scripts/: automaton_desink.py  check_copyright.py  dqn-fix.patch  install-poetry-dependencies.sh  load_policy.py  renumber_automaton.py  runnext.sh  update-local-dependencies.sh  whitelist.py
scripts/ros-stage/: docker-start.bash  docker-stop.bash  start-connector.bash
src/multinav/: __init__.py  __main__.py  testing.py  training.py
src/multinav/algorithms/: __init__.py  agents.py  modular_dqn.py  q_learning.py  value_iteration.py
src/multinav/envs/: __init__.py  abstract_sapientino.py  base.py  cont_sapientino.py  env_abstract_sapientino.py  env_cont_sapientino.py  env_grid_sapientino.py  env_ros_controls.py  grid_sapientino.py  ros_controls.py  sapientino_defs.py  temporal_goals.py
src/multinav/helpers/: __init__.py  callbacks.py  general.py  gym.py  misc.py  notebooks.py  pythomata.py  reward_shaping.py  stable_baselines.py  streaming.py  temprl.py
src/multinav/restraining_bolts/: __init__.py  automata.py  base.py  rb_abstract_sapientino.py  rb_grid_sapientino.py
src/multinav/wrappers/: reward_shaping.py  sapientino.py  temprl.py  training.py  utils.py
tests/: __init__.py  conftest.py  test_abstract_sapientino.py  test_algorithms.py  test_callbacks.py  test_fluents.py  test_grid_sapientino.py  test_helpers_general.py  test_helpers_gym.py  test_main.py  test_modular_dqn.py  test_rewardshaping.py  test_temporal_goals.py  test_wrappers.py  test_wrappers_utils.py
tests/test_modular_dqn/: __init__.py  test_classic.py  test_sapientino.py
